# guardian

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
.guardian/: config.yml
src/guardian/auth/: handlers.py
src/guardian/cli/: __init__.py
src/guardian/cli/commands/: __init__.py  auth.py  config.py  deps.py  docs.py  format.py  hooks.py  init.py  keys.py  proxy.py  repo.py  security.py
src/guardian/core/: __init__.py  auth.py  config.py  config_backup.py  repo.py  security.py
src/guardian/proxy/: certs.py  launcher.py  logging.py  server.py  server_backup.py
src/guardian/proxy/config/: default.yml
src/guardian/services/: alerts.py  git.py  gpg.py  key_management.py  key_tracking.py  keyring.py  keyring_backup.py  migration.py  ssh.py  status.py
src/guardian/services/api/: __init__.py
src/guardian/services/platform/: base.py  github.py
src/guardian/templates/hooks/: default.yml  manager.py  strict.yml
src/guardian/utils/: docs.py  export.py  tree.py
tests/: conftest.py
tests/integration/: test_worlkflow.py
tests/unit/: test_auth.py  test_config.py  test_keyring.py  test_repo.py  test_security.py
